--- a/app/views/clinics/admin.html.erb
+++ b/app/views/clinics/admin.html.erb
@@ -10,6 +10,7 @@
               </li>
             <% end %>
           </ul>
+          <br/>
           <%= link_to "Add a Clinic", new_admin_path, class: 'btn'%>
         </div>
-        
+<hr class="featurette-divider">        
