--- a/app/views/clinics/index.html.erb
+++ b/app/views/clinics/index.html.erb
@@ -62,8 +62,29 @@
           <%= image_tag("down_arrow_2.png", :class => "arrow", :alt => "arrow") %>
         </div>
       </div>
-      <div class="row">
-        <div class="span3">
+      <div class="row second-row-top">
+        <div class="span3 second-row">
+          <div class="icon_div img-rounded">
+            <i class="icon-list icon-5x"></i> 
+          </div>
+          <h3>You order material</h3>
+          <p>And you can re-order if you're running low, too.</p>
+        </div><!-- /.span4 -->
+        <div class="span1_5 rotate-arrow  second-row">
+          <%= image_tag("medium_right_arrow_3.png", :class => "arrow", :alt => "arrow") %>
+        </div>
+        <div class="span3 second-row">
+          <div class="icon_div img-rounded">
+            <i class="icon-envelope icon-5x"></i> 
+          </div>
+          <h3>We mail it to you</h3>
+          <p>For free.</p>
+        </div><!-- /.span4 -->
+        
+        <div class="span1_5 rotate-arrow  second-row">
+          <%= image_tag("medium_right_arrow_4.png", :class => "arrow", :alt => "arrow") %>
+        </div>
+        <div class="span3 second-row">
           <div class="icon_div img-rounded">
             <i class="icon-heart icon-5x"></i> 
           </div>
@@ -71,26 +92,7 @@
           <p>And they notify their partners.</p>
           
         </div><!-- /.span4 -->
-        <div class="span1_5 rotate-arrow">
-          <%= image_tag("medium_right_arrow_3.png", :class => "arrow", :alt => "arrow") %>
-        </div>
-        <div class="span3">
-          <div class="icon_div img-rounded">
-            <i class="icon-envelope icon-5x"></i> 
-          </div>
-          <h3>We mail it to you</h3>
-          <p>For free.</p>
-        </div><!-- /.span4 -->
-        <div class="span1_5 rotate-arrow">
-          <%= image_tag("medium_right_arrow_4.png", :class => "arrow", :alt => "arrow") %>
-        </div>
-        <div class="span3">
-          <div class="icon_div img-rounded">
-            <i class="icon-list icon-5x"></i> 
-          </div>
-          <h3>You order material</h3>
-          <p>And you can re-order if you're running low, too.</p>
-        </div><!-- /.span4 -->
+        
       </div><!-- /.row -->
       </div><!-- /#how -->
       
@@ -145,6 +147,8 @@
         </div>
 
       </div>
+
+      <hr class="featurette-divider">
 
       
 
