--- a/app/views/clinics/thank_you.html.erb
+++ b/app/views/clinics/thank_you.html.erb
@@ -3,7 +3,7 @@
 		<h2 class="featurette-heading">Thank you!</h2>
 		<p class="lead">What happens next:</p>
 		<center>
-		<div id="how">
+		<div class="thank_you">
       		<div class="row">
       			<div class="span1">
       			</div>
@@ -37,3 +37,5 @@
 		<a href="https://www.sotheycanknow.org" class="btn btn-primary">Visit So They Can Know</a>
 		</center>
 	</div>
+
+  <hr class="featurette-divider">
