--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -1633,7 +1633,7 @@ select:focus:invalid:focus {
 .form-actions {
   padding: 19px 20px 20px;
   margin-top: 20px;
-  margin-bottom: 20px;
+  /*margin-bottom: 20px;*/
   background-color: #f5f5f5;
   border-top: 1px solid #e5e5e5;
   *zoom: 1;
