--- a/app/views/clinics/show.html.erb
+++ b/app/views/clinics/show.html.erb
@@ -40,11 +40,17 @@
 <p>Ask patients routinely about whether or not they've come in due to a partner notification? <%= @clinic.ask_pn %></p>
 
 <h3>Other Info</h3>
+<p>Status: <%= @clinic.clinic_status %></p>
 <p>Created at: <%= @clinic.created_at %></p>
+
+<h3>Comments (<%= @clinic.comments.size %>)</h3>
+<%= render partial: 'clinics/comment', collection: @clinic.comments %>
 
 <%= link_to "edit", edit_clinic_path(@clinic), class: "btn" %>
 
 <%= link_to "delete",  clinic_path(@clinic), class: "btn", method: :delete, confirm: 'Are you sure?' %>
+
+<%= render partial: 'comments/form' %>
 
 <%= link_to "<< Back to Clinic List", admin_path %>
 
