fiddling with tags

--- a/app/views/clinics/new_admin.html.erb
+++ b/app/views/clinics/new_admin.html.erb
@@ -309,6 +309,11 @@
               </div>
             </div>
 
+            <p>
+              <%= f.label :tag_list %><br/>
+              <%= f.text_field :tag_list %>
+            </p>  
+
             <div class="form-actions">
               <button name="commit" type="submit" class="btn btn-primary btn-large">Submit</button>
             </div>
